200 OK http://www.nass.gov.ng/mp/profile/828

--- a/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.html
+++ b/www.nass.gov.ng/a497715ee37ad322c8c1de4314e501ae418d5bbf.html
@@ -337,7 +337,7 @@ Copyright: All Rights Reserved
                 </div>
                 <div class="well alt">
                   <h4>Committees</h4>
-                   <a href="/committee/55"><button type="button" class="btn green-meadow margin4">Legislative Budget and Research </button></a> 
+                   <a href="/committee/55"><button type="button" class="btn green-meadow margin4">Legislative Budget and Research </button></a> <a href="/committee/65"><button type="button" class="btn green-meadow margin4">Petroleum Resources (Upstream) </button></a> 
                 </div>
                 <div class="well">
                   <h4>Education</h4>
